--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gowtham in Germany</title>
+  <title>Gowtham IN Germany</title>
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -69,7 +69,7 @@
     <!-- CONTENT -->
     <div class="relative text-center space-y-6 transform transition hover:scale-105 z-10">
       <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight drop-shadow-[0_10px_30px_rgba(0,0,0,0.9)]">
-        Gowtham <span class="text-red-500">in Germany</span>
+        Gowtham <span class="text-red-500">IN Germany</span>
       </h1>
       <p class="text-gray-200 text-lg md:text-xl">
         YouTuber • Creator • Techie
@@ -91,7 +91,7 @@
       width="300" 
       height="80" 
       frameborder="0" 
-      scrolling="no">
+      scrolling="yes">
     </iframe>
   </div>
 </section>
@@ -155,7 +155,7 @@
         <div class="absolute left-1/2 -translate-x-1/2 w-10 h-10 rounded-full bg-red-600 flex items-center justify-center shadow-depth">4</div>
         <a href="https://www.instagram.com/gowtham_in_germany?igsh=M28zajVocjR4OHF0" class="block mr-auto w-full md:w-[45%] bg-neutral-900/80 backdrop-blur-xl p-6 rounded-2xl shadow-depth transition hover:-translate-y-2">
           <h3 class="text-xl font-semibold">📌Instagram Page</h3>
-          <p class="text-gray-400 text-sm mt-2">Join Our 20K Community</p>
+          <p class="text-gray-400 text-sm mt-2">Join Our 22K Community</p>
         </a>
       </div>
 
@@ -181,7 +181,7 @@
       <iframe 
         width="100%" 
         height="315" 
-        src="https://www.youtube.com/embed/lqKOJnf27bDpVDnr" 
+        src="https://youtu.be/TYPH-2cEL5Q" 
         title="Latest Video" 
         frameborder="0" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
