--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
           <p class="text-gray-400 text-sm mt-2">Passcode: 067677</p>
         </a>
       </div>
+      <div class="relative mb-20">
+        <div class="absolute left-1/2 -translate-x-1/2 w-10 h-10 rounded-full bg-red-600 flex items-center justify-center shadow-depth">6</div>
+        <a href="https://chat.whatsapp.com/GQ6Ovdr1w3K25otIgI62w9" class="block mr-auto w-full md:w-[45%] bg-neutral-900/80 backdrop-blur-xl p-6 rounded-2xl shadow-depth transition hover:-translate-y-2">
+          <h3 class="text-xl font-semibold">Join Consultancy Group</h3>
+          <p class="text-gray-400 text-sm mt-2">Connect with us to target MAsters Admission</p>
+        </a>
+      </div>
     </div>
   </section>
 
