--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
@@ -190,6 +186,23 @@
                     <p class="text-sm text-slate-400">Masters Admission Targets</p>
                 </div>
             </a>
+            
+            <a href="https://refer.gebuhrenfrei.com/1KlpFP" class="glass-card p-6 rounded-2xl flex items-center gap-4 group transition h-full">
+                <div class="w-12 h-12 rounded-full bg-yellow-500/20 text-yellow-500 flex items-center justify-center text-2xl group-hover:bg-yellow-600 group-hover:text-white transition">💳</div>
+                <div>
+                    <h3 class="text-xl font-bold text-white">Advanzia Bank</h3>
+                    <p class="text-sm text-slate-400">Credit limit upto 6000€ for students</p>
+                </div>
+            </a>
+
+            <a href="https://tfbank.de/mastercard-gold/freundewerbenfreunde-antrag?referralIdentifier=fdf2c797-2683-4ada-9c66-5efdfc8bb4d3" class="glass-card p-6 rounded-2xl flex items-center gap-4 group transition h-full">
+                <div class="w-12 h-12 rounded-full bg-orange-500/20 text-orange-500 flex items-center justify-center text-2xl group-hover:bg-orange-600 group-hover:text-white transition">🏦</div>
+                <div>
+                    <h3 class="text-xl font-bold text-white">TF Bank</h3>
+                    <p class="text-sm text-slate-400">Upto 6000€ limit for students</p>
+                </div>
+            </a>
+
         </div>
         
         <div class="mt-10 p-1 rounded-2xl bg-gradient-to-r from-brand to-orange-500">
