--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
             </a>
 
-            <a href="https://chat.whatsapp.com/D6oojvdIiRfCUpu5F81MqC" class="glass-card p-6 rounded-2xl flex items-center gap-4 group transition h-full">
+            <a href="https://chat.whatsapp.com/Exv2ICxY9rhJ4lthD9OkcI?mode=gi_t" class="glass-card p-6 rounded-2xl flex items-center gap-4 group transition h-full">
                 <div class="w-12 h-12 rounded-full bg-green-500/20 text-green-500 flex items-center justify-center text-2xl group-hover:bg-green-600 group-hover:text-white transition">💬</div>
                 <div>
                     <h3 class="text-xl font-bold text-white">German Language Group </h3>
